[gd_scene load_steps=7 format=3 uid="uid://b53yvhqoaw5m3"]

[ext_resource type="Script" path="res://main.gd" id="1_ii1i5"]
[ext_resource type="Script" path="res://Components/Health/health_component.gd" id="1_uvbbf"]

[sub_resource type="Gradient" id="Gradient_n57e8"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7pn3k"]
gradient = SubResource("Gradient_n57e8")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lii0m"]

[sub_resource type="LabelSettings" id="LabelSettings_y8fxj"]
font_size = 32
shadow_size = 7
shadow_color = Color(0, 0, 0, 0.498039)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ii1i5")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("1_uvbbf")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(256, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -27.0
offset_right = 20.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Min | Max - 100%"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
show_percentage = false

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="DamageButton" type="Button" parent="PanelContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Take Damage"
alignment = 2

[node name="DamageAmount" type="SpinBox" parent="PanelContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="HealingButton" type="Button" parent="PanelContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Take Healing"
alignment = 2

[node name="HealingAmount" type="SpinBox" parent="PanelContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer3"]
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="PanelContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 10.0
rounded = true
prefix = "Max Health"

[node name="GodMode" type="CheckBox" parent="PanelContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "God Mode"

[node name="ExceedMax" type="CheckBox" parent="PanelContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exceed Maximum"

[node name="HealDifference" type="CheckBox" parent="PanelContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Heal Difference"

[node name="DeathOverlay" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_7pn3k")

[node name="PanelContainer" type="PanelContainer" parent="DeathOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_lii0m")

[node name="MarginContainer" type="MarginContainer" parent="DeathOverlay/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="DeathOverlay/PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="DeathLabel" type="Label" parent="DeathOverlay/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 0, 0, 1)
layout_mode = 2
text = "You died... by %s amount!"
label_settings = SubResource("LabelSettings_y8fxj")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DeathOverlay/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RezPlz" type="Button" parent="DeathOverlay/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "rez plz...I have raygun"

[node name="ResurrectAmount" type="SpinBox" parent="DeathOverlay/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 1.0

[node name="Label" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -29.0
offset_right = 684.0
grow_vertical = 0
bbcode_enabled = true
text = "Health Component Icon by [url]https://pixel-boy.itch.io/icon-godot-node[/url]"

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="resurrected" from="HealthComponent" to="." method="_on_health_component_resurrected"]
[connection signal="pressed" from="PanelContainer2/VBoxContainer/HBoxContainer/DamageButton" to="." method="_on_damage_button_pressed"]
[connection signal="pressed" from="PanelContainer2/VBoxContainer/HBoxContainer2/HealingButton" to="." method="_on_healing_button_pressed"]
[connection signal="value_changed" from="PanelContainer3/VBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="toggled" from="PanelContainer3/VBoxContainer/GodMode" to="." method="_on_god_mode_toggled"]
[connection signal="toggled" from="PanelContainer3/VBoxContainer/ExceedMax" to="." method="_on_exceed_max_toggled"]
[connection signal="toggled" from="PanelContainer3/VBoxContainer/HealDifference" to="." method="_on_heal_difference_toggled"]
[connection signal="pressed" from="DeathOverlay/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RezPlz" to="." method="_on_rez_plz_pressed"]
[connection signal="meta_clicked" from="Label" to="." method="_on_label_meta_clicked"]
